--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zhoush-blog",
-    "title": "Zhoush's Blog",
+    "title": "ZhouSh Blog",
     "author": "Zhoush <zhoushihui210@foxmail.com>",
     "version": "1.8.2",
     "homepage": "http://ZhouShihui210.github.io",
