--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: ZhouSh's Blog
-SEOTitle: 周诗蕙的博客 | ZhouSh's Blog
+title: ZhouSh Blog
+SEOTitle: 周诗蕙的博客 | ZhouSh Blog
 header-img: img/post-bg-alitrip.jpg
 email: zhoushihui210@foxmail.com
 description: "这里是周诗蕙的个人博客"
