--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ kramdown:
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: ""
-sidebar-avatar: ./img/profile.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/profile.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # Featured Tags
 featured-tags: true # whether or not using Feature-Tags
