--- a/_config.yml
+++ b/_config.yml
@@ -94,5 +94,6 @@ friends:
   [
     { title: "羟基香豆素", href: "https://hydroxycoumarin.github.io/" },
     { title: "膜法师猫定谔", href: "http://www.fangmuseum.com" },
-    { title: "yangjlin", href: "http://www.yangjlin.com" },
+    { title: "linyang", href: "http://www.yangjlin.com" },
+    { title: "linyang's phtography", href: "http://yanglin.photo" },
   ]
