--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ featured-condition-size: 1 # A tag will be featured if the size of it is more th
 #service-worker: true
 
 # MathJax rendering for layout:page (e.g. post preview)
-#page-mathjax: false
+page-mathjax: true
 
 # Friends
 friends:
