--- a/_config.yml
+++ b/_config.yml
@@ -96,4 +96,5 @@ friends:
     { title: "膜法师猫定谔", href: "http://www.fangmuseum.com" },
     { title: "linyang", href: "http://www.yangjlin.com" },
     { title: "linyang's phtography", href: "http://yanglin.photo" },
+    { title: "qbb", href: "https://www.qbb.sh/" },
   ]
