--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview --host",
     "lint": "eslint .",
     "cz": "czg",
+    "z:image": "tsx ./build/node/zImage.ts",
     "gen:rss": "tsx ./build/node/rss.ts",
     "gen:sitemap": "tsx ./build/node/sitemap.ts"
   },
@@ -39,6 +40,8 @@
     "feed": "^4.2.2",
     "fs-extra": "^11.1.0",
     "gray-matter": "^4.0.3",
+    "imagemin": "^8.0.1",
+    "imagemin-webp": "^7.0.0",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.5",
     "markdown-it-container": "^3.0.0",
@@ -51,6 +54,7 @@
     "npm-run-all": "^4.1.5",
     "pathe": "^1.0.0",
     "pnpm": "^7.18.2",
+    "rimraf": "^3.0.2",
     "sitemap": "^7.1.1",
     "tsx": "^3.12.1",
     "typescript": "^4.9.4",
