--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "title": "ZhouSh Blog",
     "author": "Zhoush <zhoushihui210@foxmail.com>",
     "version": "1.8.2",
-    "homepage": "http://ZhouShihui210.github.io",
+    "homepage": "http://zhoush210.github.io",
     "repository": {
         "type": "git",
-        "url": "https://github.com/ZhouShihui210/ZhouShihui210.github.io"
+        "url": "https://github.com/ZhouShihui210/zhoush210.github.io"
     },
-    "bugs": "https://github.com/ZhouShihui210/ZhouShihui210.github.io/issues",
+    "bugs": "https://github.com/ZhouShihui210/zhoush210.github.io/issues",
     "devDependencies": {
         "grunt": ">=1.3.0",
         "grunt-banner": "~0.2.3",
