--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ future: true
 RSS: false
 #weibo_username: huxpro
 #zhihu_username: huxpro
-github_username: ZhouShihui210
+github_username: zhoush210
 bilibili_uid: 291406031 # 你主页的链接
 #twitter_username: huxpro
 #facebook_username:  huxpro
