--- a/_config.yml
+++ b/_config.yml
@@ -98,5 +98,6 @@ friends:
     { title: "膜法师猫定谔", href: "http://www.fangmuseum.com" },
     { title: "qbb", href: "https://www.qbb.sh/" },
     { title: "linyang", href: "http://www.yangjlin.com" },
-    { title: "linyang's phtography", href: "http://yanglin.photo" }
+    { title: "linyang's phtography", href: "http://yanglin.photo" },
+    { title: "frank-zy-dou", href: "https://frank-zy-dou.github.io/" }
   ]
