--- a/_config.yml
+++ b/_config.yml
@@ -99,5 +99,6 @@ friends:
     { title: "qbb", href: "https://www.qbb.sh/" },
     { title: "linyang", href: "http://www.yangjlin.com" },
     { title: "linyang's phtography", href: "http://yanglin.photo" },
-    { title: "frank-zy-dou", href: "https://frank-zy-dou.github.io/" }
+    { title: "frank-zy-dou", href: "https://frank-zy-dou.github.io/" },
+    { title: "周矩", href: "https://road2goals.github.io/" }
   ]
